tests/negative/other/function_hoisted_callback_type_mismatch.tx
// EXPECTED: COMPILE_ERROR
// Description: Hoisted higher-order functions must preserve callback parameter types.

function main() {
    applyFormatter((value: int) => {
        return value;
    });
}

function applyFormatter(fn: (value: string) => string): string {
    return fn("tejx");
}
